
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_4__ {int f; int l133; } ;
typedef TYPE_1__ e ;


 int i (TYPE_1__*,int,int) ;

void
cp_start_e1(e*a){{if(!(a->f!=3||a->l133==1))goto l364;return;l364:;}a
->l133=1;i(a,23,16);}
